# misc

./: .gitignore  README.md
.github/workflows/: base-minimal.yml
.github/workflows/scripts/: hello.py  hello.xsh
VimRegEx.vim/: README
VimRegEx.vim/autoload/: vimregex.vim
VimRegEx.vim/plugin/: VimRegEx.vim
dracula_paper/: README.md
inksight/: CHANGELOG.md  README.md  colab.ipynb  environment.yml  pyproject.toml  visualize_dataset.py
inksight/docs/: dataset.md
inksight/utils/: __init__.py  ink.py  io.py  visualize.py
numpyviz/: catenize.py  readme.md
pdf-to-svg/: CNAME  README.md  index.html  manifest.json  package-lock.json  package.json  sw.js
shit-container/: README.md
shit-container/almalinux_8p10/: DockerFile  Dockerfile  README.md  python_appimage.sh  xonsh_setup.sh
shit-container/almalinux_8p10/python/: README.md  appimage_build.py  build_pi_python_appimage.fish  main.py  pacman.py  pacman.toml  pyproject.toml  requirements.txt
